# railway-station-congestion-simulator

./: .gitignore  README.md  cli.py  conftest.py  e2e_round5.py  e2e_smoke.py  pyproject.toml  requirements.txt  혼잡도 합성데이터 생성 시뮬레이터.txt
.github/workflows/: deploy-pages.yml
engine/: __init__.py  bridge.py  config.py  dynamics.py  generators.py  model.py  recorder.py  rounding.py  simulator.py  validate.py
examples/: sample_station.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  defaults.js  engineClient.js  paramInfo.js  store.js  styles.css  templates.js  util.js
frontend/src/components/: Controls.jsx  Dashboard.jsx  DeletableEdge.jsx  ExportPanel.jsx  GraphEditor.jsx  HelpModal.jsx  InfoTip.jsx  Inspector.jsx  TemplatesModal.jsx  useModal.js
frontend/src/worker/: pyodideWorker.js
ml/: dataset.py  stgcn.py  train.py
tests/: test_bridge.py  test_capacity.py  test_conservation.py  test_delay.py  test_egress.py  test_flow_balance.py  test_invariants.py  test_reproducibility.py  test_round2.py  test_round3.py  test_round4.py  test_round5.py  test_validation.py
