[project]
name = "station-congestion-simulator"
version = "0.1.0"
description = "철도역사 혼잡도 합성데이터 생성 시뮬레이터 (STGCN 학습용)"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ml = ["torch>=2.2", "pandas>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["engine"]
